[package]
name = "stryke-selenium"
version = "0.1.0"
edition = "2021"
description = "Selenium WebDriver automation cdylib for the stryke `selenium` package (browser, navigation, elements, JS, screenshots, cookies)"
authors = ["MenkeTechnologies"]
license = "MIT"
repository = "https://github.com/MenkeTechnologies/stryke-selenium"
homepage = "https://menketechnologies.github.io/stryke-selenium/"
publish = false

# Shipped as a precompiled cdylib loaded in-process by stryke via dlopen.
# Each `#[no_mangle] extern "C" fn selenium__*(args_json: *const c_char) -> *const c_char`
# is registered as a stryke-callable function on first `use Selenium`. A
# process-global `tokio::runtime::Runtime` (one MT-runtime per stryke process)
# bridges thirtyfour's async API to the sync FFI: every handler is
# `runtime.block_on(async { ... })`. WebDriver sessions and WebElement handles
# persist across calls in `OnceCell<Mutex<HashMap<u64, _>>>` registries, so a
# stryke script can open a browser once and drive it across many `Selenium::*`
# calls without re-handshaking the WebDriver session.
[lib]
name = "stryke_selenium"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# thirtyfour = WebDriver/Selenium client. rustls-tls so the cdylib doesn't
# drag the openssl system library into the build matrix (macOS arm64 + Linux
# musl users have notoriously fragile openssl link paths; rustls is pure
# Rust).
thirtyfour = { version = "0.35", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
once_cell = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
